# chat-test3

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml  flake.nix  setup-rootfs.sh  setup.py
chat-agent/: Cargo.toml
chat-agent/src/: channel.rs  hello.rs  interrupt.rs  lib.rs  query.rs  question_answer.rs  relay.rs
chat-history/: Cargo.toml
chat-history/src/: history.rs  journal.rs  jsonl.rs  lib.rs  project.rs  session.rs
chat-relay/: Cargo.toml
chat-relay/src/: agent.rs  lib.rs  relay.rs  settings.rs  transcript.rs
chat-settings/: Cargo.toml
chat-settings/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
docs/: chat-architecture.md
download/: Cargo.toml
download/src/: file.rs  lib.rs  seekable_channel_writer.rs  zip.rs
firecracker-client/: Cargo.toml  spec.md
firecracker-client/src/: drive.rs  http.rs  lib.rs  machine.rs  mmds.rs  network.rs
firecracker-manager/: Cargo.toml  spec.md
firecracker-manager/src/: cleanup.rs  configure.rs  lib.rs  mmds_iam.rs  network.rs  process.rs  vm.rs
firecracker-manager/tests/: e2e.rs
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/src/: App.tsx  app.js  index.css  styles.css  types.ts
frontend/src/components/: ChatComposer.tsx  ChatInterface.tsx  ChatMessagesPane.tsx  FileManager.tsx  IconRail.tsx  MessageComponent.tsx  MessageCopyControl.tsx  SettingsPanel.tsx  Sidebar.tsx  Terminal.tsx  ToolDiffViewer.tsx  ToolRenderer.tsx
frontend/src/contexts/: SseContext.tsx
frontend/src/hooks/: useChatState.ts  useSseHandlers.ts
frontend/src/utils/: transcript.ts
frontend/test-results/: .last-run.json
frontend/tests/: chat.spec.ts  composer.spec.ts  csrf.spec.ts  navigation.spec.ts  pending-session.spec.ts  reconnect.spec.ts  reset.spec.ts  session.spec.ts  streaming.spec.ts
frontend/tests/helpers/: setup.ts
migrations/: 002_chat_sessions.sql
net-helper/: Cargo.toml  spec.md
net-helper/src/: main.rs
pty/: Cargo.toml  spec.md
pty/src/: lib.rs
rootfs/: agent.py  agent.service  connector.py  package-lock.json  pyproject.toml  settings.py  test_agent.py
rootfs/agent/: agent.py  connector.py  pyproject.toml  settings.py
rootfs/agent/src/agent/: connector.py  daemon.py  settings.py
scripts/: build_rootfs.py
server/: Cargo.toml  build.rs  spec.md
server/frontend/: build.mjs  package-lock.json  package.json
server/frontend/src/: app.js  file_manager.js  styles.css  terminal.js
server/src/: auth.rs  chat.rs  csrf.rs  download.rs  files.rs  frontend.rs  handlers.rs  main.rs  settings.rs  ssh.rs  state.rs  static_files.rs  templates.rs  terminal.rs  transcript.rs  upload.rs  vm.rs
sftp-client/: Cargo.toml
sftp-client/src/: lib.rs
ssh-client/: Cargo.toml
ssh-client/src/: lib.rs
store/: Cargo.toml  spec.md
store/src/: chat_session.rs  lib.rs  user.rs
terminal-bridge/: Cargo.toml  spec.md
terminal-bridge/src/: lib.rs
upload/: Cargo.toml
upload/src/: lib.rs
vm/: agent.js  agent.py  build_rootfs.py  connector.py  settings.py
vm-lifecycle/: Cargo.toml
vm-lifecycle/src/: iam.rs  lib.rs  mmds.rs  rootfs.rs  sweep.rs  vm_config.rs
vm-manager/: Cargo.toml
vm-manager/src/: main.rs
vm-settings/: Cargo.toml
vm-settings/src/: lib.rs
vm-shell/: Cargo.toml
vm-shell/src/: main.rs
