[package]
name = "chat-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
ssh-client = { path = "../ssh-client" }
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
bytes = "1.11.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.32"
russh = "0.57.1"
russh-sftp = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
