[package]
name = "chat-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
chat-agent = { path = "../chat-agent" }
ssh-client = { git = "https://github.com/llm-proxy-rs/web" }
anyhow = "1.0.102"
tokio-stream = "0.1"
bytes = "1.11.1"
futures = "0.3.32"
russh = "0.57.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
