[package]
name = "download"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8" }
bytes = "1.11.1"
common = { path = "../common" }
futures = "0.3.32"
russh = "0.57.1"
russh-sftp = "2.1.1"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
zip = "2"
