[package]
name = "firecracker-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
firecracker-client = { path = "../firecracker-client" }
nix = { version = "0.29", features = ["signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "time"] }
tracing = "0.1.0"
