[package]
name = "net-helper"
version = "0.1.0"
description = "Privileged helper binary for TAP device management and NAT setup"
edition = "2024"

[[bin]]
name = "net-helper"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ipnet = "2"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"
