[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.0"
async-trait = "0.1.0"
axum = { version = "0.8.0", features = ["multipart", "ws"] }
aws-config = "1.0.0"
aws-credential-types = "1.0.0"
bytes = "1.0.0"
clap = { version = "4.0.0", features = ["derive", "env"] }
firecracker-manager = { path = "../firecracker-manager" }
futures = "0.3.0"
maud = "0.26"
handlers = { git = "https://github.com/llm-proxy-rs/cognito.git", version = "0.1.0" }
russh = "0.46.0"
russh-keys = "0.46.0"
russh-sftp = "2.1.1"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
time = "0.3.0"
tokio = { version = "1.0.0", features = ["full"] }
tower-sessions = "0.15.0"
uuid = { version = "1.0.0", features = ["v4"] }
