[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["multipart", "ws"] }
aws-config = "1.8.15"
aws-credential-types = "1.2.14"
bytes = "1.11.1"
chrono = "0.4.44"
config = "0.15.19"
firecracker-manager = { path = "../firecracker-manager" }
futures = "0.3.32"
maud = "0.27.0"
handlers = { git = "https://github.com/llm-proxy-rs/cognito.git", version = "0.1.0" }
russh = "0.57.1"
russh-sftp = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
store = { path = "../store" }
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower-sessions = "0.15.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
uuid = { version = "1.22.0", features = ["v4"] }
