[package]
name = "server"
version = "0.1.0"
description = "Axum web server providing browser-based terminal access to Firecracker microVMs"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["multipart", "ws"] }
bytes = "1.11.1"
chat-relay = { path = "../chat-relay" }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.19"
download = { path = "../download" }
firecracker-manager = { path = "../firecracker-manager" }
futures = "0.3.32"
leptos = { version = "0.7.0", features = ["ssr"] }
handlers = { git = "https://github.com/llm-proxy-rs/cognito.git", version = "0.1.0" }
russh = "0.57.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sftp-client = { path = "../sftp-client" }
ssh-client = { path = "../ssh-client" }
store = { path = "../store" }
time = { version = "0.3.47", features = ["formatting"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower-sessions = "0.15.0"
tower-sessions-sqlx-store = { git = "https://github.com/llm-proxy-rs/tower-sessions-stores.git", version = "0.15.0", features = ["postgres"] }
upload = { path = "../upload" }
uuid = { version = "1.22.0", features = ["v4"] }
vm-lifecycle = { path = "../vm-lifecycle" }
zip = "2"
