[package]
name = "vm-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vm-manager"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
aws-config = "1"
aws-credential-types = "1"
chrono = "0.4.44"
firecracker-manager = { path = "../firecracker-manager" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
