[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["claude-agent-sdk"]

[project.scripts]
agent = "agent.daemon:main"
connector = "agent.connector:main"
agent-settings = "agent.settings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
